--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@
 # * https://github.com/supermarin/xcpretty#usage
 
 language: objective-c
+rvm: 2.2.0
 cache: cocoapods
 podfile: Example/Podfile
 before_install:
