--- a/.travis.yml
+++ b/.travis.yml
@@ -10,5 +10,5 @@ before_install:
 - gem install cocoapods # Since Travis is not always on latest version
 - pod install --project-directory=Example
 script:
-- set -o pipefail && xcodebuild test -workspace Example/TJTrigram.xcworkspace -scheme TJTrigram-Example -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO | xcpretty
+- set -o pipefail && xcodebuild -workspace Example/TJTrigram.xcworkspace -scheme TJTrigram-Example -sdk iphonesimulator -destination 'platform=iOS Simulator,name=iPhone 6,OS=9.1' test | xcpretty
 - pod lib lint
