--- a/.travis.yml
+++ b/.travis.yml
@@ -3,12 +3,13 @@
 # * https://github.com/supermarin/xcpretty#usage
 
 language: objective-c
-rvm: 2.2.0
+osx_image: xcode7.3
+rvm: 2.3.0
 cache: cocoapods
 podfile: Example/Podfile
 before_install:
 - gem install cocoapods # Since Travis is not always on latest version
 - pod install --project-directory=Example
 script:
-- set -o pipefail && xcodebuild -workspace Example/TJTrigram.xcworkspace -scheme TJTrigram-Example -sdk iphonesimulator -destination 'platform=iOS Simulator,name=iPhone 6,OS=9.1' test | xcpretty
+- set -o pipefail && xcodebuild -workspace Example/TJTrigram.xcworkspace -scheme TJTrigram-Example -sdk iphonesimulator9.3 test | xcpretty
 - pod lib lint
